--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li> <!-- 链接到首页 -->
-                <li><a href="learning.html">About</a></li> <!-- 链接到关于页面 -->
-                <li><a href="thinkaboutlife.html">Contact</a></li> <!-- 链接到联系页面 -->
+                <li><a href="learning.html">learning</a></li> <!-- 链接到关于页面 -->
+                <li><a href="thinkaboutlife.html">thinkaboutlife</a></li> <!-- 链接到联系页面 -->
             </ul>
         </nav>
     </header>
