--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,20 +12,32 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li> <!-- 链接到首页 -->
-                <li><a href="learning.html">learning</a></li> <!-- 链接到关于页面 -->
-                <li><a href="thinkaboutlife.html">thinkaboutlife</a></li> <!-- 链接到联系页面 -->
+                <li><a href="learning.html">Learning</a></li> <!-- 链接到Learning页面 -->
+                <li><a href="thinkaboutlife.html">Think About Life</a></li> <!-- 链接到Think About Life页面 -->
             </ul>
         </nav>
     </header>
 
     <main>
         <article>
-            <h2>Blog Post Title</h2> <!-- 博客文章标题 -->
-            <p>Published on March 1st, 2022</p> <!-- 发布日期 -->
-    
-            <p>This is the content of my blog post. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nisl a tempor blandit, lectus enim aliquam ligula, quis ultrices ipsum est ut erat.</p>
-    
-            <p>Integer quis purus vitae lorem aliquam mollis. Nam vulputate purus non orci feugiat venenatis. Proin in diam eget nisl convallis gravida at nec mauris. In sed velit id lacus gravida aliquam.</p>
+            <header>
+                <h2>Welcome to My Blog!</h2> <!-- 首页标题 -->
+            </header>
+            <section>
+                <h3>Latest Blog Posts</h3> <!-- 最新博客文章标题 -->
+                <ul>
+                    <li><a href="#">Blog Post 1</a></li> <!-- 最新博客文章链接 -->
+                    <li><a href="#">Blog Post 2</a></li>
+                    <li><a href="#">Blog Post 3</a></li>
+                </ul>
+            </section>
+            <section>
+                <h3>About Me</h3> <!-- 关于我标题 -->
+                <p>Welcome to my blog! I am a passionate writer and love to share my thoughts and experiences with others. In this blog, you will find articles on various topics such as life, learning, and much more.</p>
+            </section>
+            <footer>
+                <p>&copy; 2022 My Blog. All rights reserved.</p>
+            </footer>
         </article>
     </main>
 
@@ -37,4 +48,3 @@
     <script src="script.js"></script> <!-- 引入脚本文件 -->
 </body>
 </html>
-
