--- a/learning.html
+++ b/learning.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog - Think About Life</title>
+    <title>My Blog</title>
     <link rel="stylesheet" href="styles.css"> <!-- 引入样式表 -->
 </head>
 <body>
@@ -21,21 +21,22 @@
     <main>
         <article>
             <header>
-                <h2>Think About Life</h2> <!-- 页面标题 -->
+                <h2>Welcome to My Blog!</h2> <!-- 首页标题 -->
             </header>
             <section>
-                <p>Welcome to the Think About Life page of my blog. This page is dedicated to contemplating the meaning of life, reflecting on our existence, and exploring deep philosophical questions.</p>
+                <h3>Latest Blog Posts</h3> <!-- 最新博客文章标题 -->
+                <ul>
+                    <li><a href="#">Blog Post 1</a></li> <!-- 最新博客文章链接 -->
+                    <li><a href="#">Blog Post 2</a></li>
+                    <li><a href="#">Blog Post 3</a></li>
+                </ul>
             </section>
             <section>
-                <h3>Question 1</h3> <!-- 问题 1 -->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod interdum nisl, vitae lacinia enim tincidunt nec.</p>
-            </section>
-            <section>
-                <h3>Question 2</h3> <!-- 问题 2 -->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod interdum nisl, vitae lacinia enim tincidunt nec.</p>
+                <h3>About Me</h3> <!-- 关于我标题 -->
+                <p>Welcome to my blog! I am a passionate writer and love to share my thoughts and experiences with others. In this blog, you will find articles on various topics such as life, learning, and much more.</p>
             </section>
             <footer>
-                <p>Tags: <a href="#">philosophy</a>, <a href="#">life</a>, <a href="#">meaning</a></p> <!-- 页面标签 -->
+                <p>&copy; 2022 My Blog. All rights reserved.</p>
             </footer>
         </article>
     </main>
