--- a/learning.html
+++ b/learning.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog</title>
+    <title>My Blog - Learning</title>
     <link rel="stylesheet" href="styles.css"> <!-- 引入样式表 -->
 </head>
 <body>
@@ -21,22 +21,21 @@
     <main>
         <article>
             <header>
-                <h2>Welcome to My Blog!</h2> <!-- 首页标题 -->
+                <h2>Learning</h2> <!-- 页面标题 -->
             </header>
             <section>
-                <h3>Latest Blog Posts</h3> <!-- 最新博客文章标题 -->
-                <ul>
-                    <li><a href="#">Blog Post 1</a></li> <!-- 最新博客文章链接 -->
-                    <li><a href="#">Blog Post 2</a></li>
-                    <li><a href="#">Blog Post 3</a></li>
-                </ul>
+                <p>Welcome to the Learning page of my blog. Here, I share my knowledge, insights, and experiences on various topics that I find interesting and worth exploring.</p>
             </section>
             <section>
-                <h3>About Me</h3> <!-- 关于我标题 -->
-                <p>Welcome to my blog! I am a passionate writer and love to share my thoughts and experiences with others. In this blog, you will find articles on various topics such as life, learning, and much more.</p>
+                <h3>Topic 1</h3> <!-- 主题 1 -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod interdum nisl, vitae lacinia enim tincidunt nec.</p>
+            </section>
+            <section>
+                <h3>Topic 2</h3> <!-- 主题 2 -->
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod interdum nisl, vitae lacinia enim tincidunt nec.</p>
             </section>
             <footer>
-                <p>&copy; 2022 My Blog. All rights reserved.</p>
+                <p>Tags: <a href="#">learning</a>, <a href="#">knowledge</a>, <a href="#">insights</a></p> <!-- 页面标签 -->
             </footer>
         </article>
     </main>
@@ -48,3 +47,4 @@
     <script src="script.js"></script> <!-- 引入脚本文件 -->
 </body>
 </html>
+
