--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li> <!-- 链接到首页 -->
                 <li><a href="learning.html">Learning</a></li> <!-- 链接到Learning页面 -->
                 <li><a href="thinkaboutlife.html">Think About Life</a></li> <!-- 链接到Think About Life页面 -->
+                 <li><a href="recording.html">Recording</a></li> <!-- 链接到recording -->
             </ul>
         </nav>
     </header>
@@ -24,14 +25,6 @@
                 <h2>Welcome to My Blog!</h2> <!-- 首页标题 -->
             </header>
             <section>
-                <h3>Latest Blog Posts</h3> <!-- 最新博客文章标题 -->
-                <ul>
-                    <li><a href="#">Blog Post 1</a></li> <!-- 最新博客文章链接 -->
-                    <li><a href="#">Blog Post 2</a></li>
-                    <li><a href="#">Blog Post 3</a></li>
-                </ul>
-            </section>
-            <section>
                 <h3>About Me</h3> <!-- 关于我标题 -->
                 <p>Welcome to my blog! I am a passionate writer and love to share my thoughts and experiences with others. In this blog, you will find articles on various topics such as life, learning, and much more.</p>
             </section>
@@ -41,9 +34,6 @@
         </article>
     </main>
 
-    <footer>
-        <p>&copy; 2022 My Blog. All rights reserved.</p>
-    </footer>
 
     <script src="script.js"></script> <!-- 引入脚本文件 -->
 </body>
