--- a/recording.html
+++ b/recording.html
@@ -3,39 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>考研记录</title>
     <!-- 在这里添加任何额外的meta标签或链接到CSS文件 -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-            padding: 20px;
-            background: #fff;
-        }
-        header {
-            background: #50b7f5;
-            color: #ffffff;
-            padding: 20px;
-            text-align: center;
-        }
-        article {
-            margin-bottom: 20px;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #333;
-            color: #ffffff;
-        }
-    </style>
+
 </head>
 <body>
     <header>
